feat: added checkin and addBill routes (#39)
* feat: added checkin and addBill routes

* feat: townscript

---------
