# app/controller.go
@@ -1,11 +1,12 @@
 package app
 
 type Controller struct {
-	User    UserController
-	Event   EventController
-	Admin   AdminController
-	Hospi   HospiController
-	CMS     CMSController
-	Public  PublicController
-	TShirts TShirtsController
+	User     UserController
+	Event    EventController
+	Admin    AdminController
+	Hospi    HospiController
+	CMS      CMSController
+	Public   PublicController
+	TShirts  TShirtsController
+	Treasury TreasuryController
 }
