# app/hospi_controller.go
@@ -8,4 +8,5 @@ type HospiController interface {
 	GetRooms(c echo.Context) error
 	AddUpdateRoom(c echo.Context) error
 	DeleteRoom(c echo.Context) error
+	CheckIn(c echo.Context) error
 }
