# router/hospi_router.go
@@ -18,4 +18,6 @@ func NewHospiRouter(e *echo.Group, controller app.HospiController) {
 	hospiRoutes.POST("/updateHostel", controller.AddUpdateHostel) // add and update hostel
 	hospiRoutes.POST("/updateRoom", controller.AddUpdateRoom)     // add and update room
 	hospiRoutes.DELETE("/deleteRoom", controller.DeleteRoom)
+
+	hospiRoutes.POST("/checkIn", controller.CheckIn)
 }
